--- a/preamble.tex
+++ b/preamble.tex
@@ -82,7 +82,7 @@
 \DeclareRobustCommand{\WZ}{\HepProcess{\PW\PZ}\xspace}
 \DeclareRobustCommand{\ZZ}{\HepProcess{\PZ\PZ}\xspace}
 \DeclareRobustCommand{\tanb}{$\tan{\beta}$}
-\DeclareRobustCommand{\cosba}{$\cos{\beta-\alpha}$}
+\DeclareRobustCommand{\cosba}{$\cos{(\beta-\alpha)}$}
 \newcommand{\mA}{$m_{\PHiggsps}$}
 \newcommand{\mH}{$m_{\PHiggs}$}
 \newcommand{\mHplus}{$m_{\PHiggs^{+}}$}
