--- a/thesis.tex
+++ b/thesis.tex
@@ -27,14 +27,14 @@
 
 
 %% Define the thesis title and author
-\title{Searches for neutral Higgs bosons in final states with two $\tau$ leptons using the CMS detector}
-\author{Adinda de Wit}
+\title{Searches for neutral Higgs bosons in final states with two tau leptons using the CMS detector}
+\author{Adinda Maite de Wit}
 
 %% Doc-specific PDF metadata
 \makeatletter
 \@ifpackageloaded{hyperref}{%
 \hypersetup{%
-  pdftitle = {Searches for neutral Higgs bosons in final states with two $\tau$ leptons using the CMS detector},
+  pdftitle = {Searches for neutral Higgs bosons in final states with two tau leptons using the CMS detector},
   pdfsubject = {Adinda de Wit's PhD thesis},
   pdfkeywords = {CMS, physics, LHC, tau, Higgs},
   pdfauthor = {\textcopyright\ Adinda de Wit}
